--- a/emacs.d/init-config.org
+++ b/emacs.d/init-config.org
@@ -2,6 +2,11 @@
 #+AUTHOR: Pavel 'M4E5TR0' Matcula
 #+STARTUP: odd
 
+#+BEGIN_SRC emacs-lisp
+  (defun my-load-personal-file (file)
+    (load (expand-file-name file (expand-file-name "personal" user-emacs-directory)) :noerror))
+#+END_SRC
+
 * Frame visual appearance
 *** Built-in
 ***** Main packages
@@ -21,7 +26,7 @@
                 (set-scroll-bar-mode 'right))))
 
   (use-package linum
-    :idle (global-linum-mode 1)) ;; BUG: init crashes Emacs daemon
+    :idle (global-linum-mode 1)) ; BUG: init crashes Emacs daemon
 
   (use-package tooltip
     :config (progn
@@ -33,20 +38,20 @@
 
   ;; cursor
   (setq-default cursor-type 'bar)
+  (setq-default cursor-in-non-selected-windows nil)
+
   (add-hook 'overwrite-mode-hook
             '(lambda ()
                (if overwrite-mode
                    (setq cursor-type 'box)
                  (setq cursor-type 'bar))))
 
-  (setq-default cursor-in-non-selected-windows nil)
-
   (setq blink-cursor-delay 60) ; NOTE: order matters
   (setq blink-cursor-blinks 0) ; NOTE: order matters
   (blink-cursor-mode 1)        ; NOTE: order matters
 
   (use-package hl-line
-    :idle (global-hl-line-mode 1) ;; BUG: init crashes Emacs daemon
+    :idle (global-hl-line-mode 1) ; BUG: init crashes Emacs daemon
     :config (progn
               (defun my-hl-line-mode-off ()
                 (interactive)
@@ -71,12 +76,17 @@
     :config (progn
               (tabbar-mode 1)
               (setq tabbar-use-images nil)
+              (custom-set-variables ; FIXME
+               '(tabbar-scroll-left-button
+                 '((" <") " ="))
+               '(tabbar-scroll-right-button
+                 '(("> ") "= ")))
               (defun my-get-tabbar-tab-label (tab)
                 (concat " " (tabbar-buffer-tab-label tab) " "))
               (setq tabbar-tab-label-function 'my-get-tabbar-tab-label)))
 #+END_SRC
 
-* Major editing modes
+* Major working modes
 *** Built-in
 ***** Main packages
 
@@ -94,27 +104,42 @@
   (req-package paradox
     :require (package async)
     :config (progn
-              (my-load-personal-file "paradox-config")))
+              (my-load-personal-file "paradox-config")
+              (setq paradox-automatically-star nil)))
 #+END_SRC
 
 *** Built-in: org-mode
+***** Main package
 
 #+BEGIN_SRC emacs-lisp
-  (req-package org
+  (use-package org
+    :ensure org-plus-contrib
     :config (progn
               (setq org-odd-levels-only t)
               (setq org-hide-leading-stars t)
               (setq org-src-fontify-natively t)))
 #+END_SRC
 
+***** Extensions
+
+#+BEGIN_SRC emacs-lisp
+  (req-package org-tree-slide
+    :require (org)
+    :commands (org-tree-slide-mode))
+
+  (req-package ox-reveal
+    :require (org htmlize)
+    :config (progn
+              (setq org-reveal-root custom-reveal.js-root)))
+#+END_SRC
+
 *** Built-in: dired
 ***** Main package
 
 #+BEGIN_SRC emacs-lisp
-
   (use-package dired
     :config (progn
-              (put 'dired-find-alternate-file 'disabled nil)))
+              (put 'dired-find-alternate-file 'disabled nil))) ; TESTME
 #+END_SRC
 
 ***** Extensions
@@ -201,7 +226,7 @@
     :config (icomplete-mode 1))
 #+END_SRC
 
-*** Helm
+*** TODO Helm
 * Auto parentheses
 *** Built-in: electric
    
@@ -260,8 +285,8 @@
             (add-hook 'c++-mode-hook 'irony-mode)
             (add-hook 'objc-mode-hook 'irony-mode))
     :config (progn
-              (setq w32-pipe-read-delay 0) ;; NOTE: this improves performance on Windows
-              (setq-mode-local c++-mode irony-additional-clang-options '("-std=c++11"))
+              (setq w32-pipe-read-delay 0)
+              ;; (setq-mode-local c++-mode irony-additional-clang-options '("-std=c++11"))
               (add-hook 'irony-mode-hook 'irony-cdb-autosetup-compile-options)
               (defun my-set-irony-mode-keys ()
                 (define-key irony-mode-map [remap completion-at-point]
@@ -272,7 +297,7 @@
 #+END_SRC
    
 * Pop-up completion at point
-*** Auto-complete
+*** TODO Auto-complete
 ***** Main package
 
 #+BEGIN_SRC emacs-lisp
@@ -287,6 +312,14 @@
 #+BEGIN_SRC emacs-lisp
   (req-package company
     :config (global-company-mode 1))
+#+END_SRC
+
+***** Extensions
+
+#+BEGIN_SRC emacs-lisp
+  (req-package company-quickhelp :disabled t
+    :require (company)
+    :config (company-quickhelp-mode 1))
 #+END_SRC
 
 ***** Extensions: ycmd
@@ -356,20 +389,21 @@
 #+BEGIN_SRC emacs-lisp
   (use-package font-core
     :config (global-font-lock-mode 1))
+
+  (load-file (expand-file-name "font-lock-config.el" (expand-file-name "init.d" user-emacs-directory)))
 #+END_SRC
 
 ***** Extensions
 
 #+BEGIN_SRC emacs-lisp
   (req-package cmake-font-lock
+    :require (font-core)
     :commands (cmake-font-lock-activate)
     :init (progn
-            (defun my-add-cmake-font-lock ()
-              (if (eq major-mode 'cmake-mode)
-                  (cmake-font-lock-activate)))
-            (add-hook 'font-lock-mode-hook 'my-add-cmake-font-lock)))
+            (add-hook 'cmake-mode-hook 'cmake-font-lock-activate)))
 
-  (use-package doxymacs
+  (req-package doxymacs
+    :require (font-core)
     :commands (doxymacs-mode doxymacs-font-lock)
     :init (progn
             (add-hook 'c-mode-common-hook 'doxymacs-mode)
@@ -378,12 +412,10 @@
                       (eq major-mode 'c++-mode))
                   (doxymacs-font-lock)))
             (add-hook 'font-lock-mode-hook 'my-add-doxymacs-font-lock)))
-
-  (load-file (expand-file-name "init.d/font-lock-config.el" user-emacs-directory))
 #+END_SRC
 
 * Text spelling check
-*** Built-in: Flyspell
+*** TODO Built-in: Flyspell
 ***** Main package
 ***** Extensions
 * Code syntax check
@@ -395,9 +427,9 @@
     :commands (flymake-find-file-hook)
     :init (add-hook 'find-file-hook 'flymake-find-file-hook)
     :config (progn
-              (add-to-list 'flymake-allowed-file-name-masks '("\\.[fF]\\(?:90\\|95\\|03\\|08\\)?\\'" flymake-simple-make-init))
-              (add-to-list 'flymake-allowed-file-name-masks '("\\.f\\(?:or\\|pp\\|tn\\)\\'" flymake-simple-make-init))
-              (add-to-list 'flymake-allowed-file-name-masks '("\\.F\\(?:OR\\|PP\\|TN\\)\\'" flymake-simple-make-init))))
+              (add-to-list 'flymake-allowed-file-name-masks '("\\.[fF]\\(?:90\\|95\\|03\\|08\\)?\\'" flymake-simple-make-init)) ; XXX
+              (add-to-list 'flymake-allowed-file-name-masks '("\\.f\\(?:or\\|pp\\|tn\\)\\'" flymake-simple-make-init)) ; XXX
+              (add-to-list 'flymake-allowed-file-name-masks '("\\.F\\(?:OR\\|PP\\|TN\\)\\'" flymake-simple-make-init)))) ; XXX
 #+END_SRC
 
 ***** Extensions
@@ -409,7 +441,7 @@
     :init (add-hook 'lua-mode-hook 'flymake-lua-load))
 
   (req-package flymake-shell
-    :require (flymake)
+    :require (flymake sh-script)
     :commands (flymake-shell-load)
     :init (add-hook 'sh-set-shell-hook 'flymake-shell-load))
 #+END_SRC
@@ -421,7 +453,8 @@
   (req-package flycheck
     :config (progn
               (global-flycheck-mode 1)
-              (setq-mode-local c++-mode flycheck-clang-language-standard "c++11")))
+              ;; (setq-mode-local c++-mode flycheck-clang-language-standard "c++11")
+              ))
 #+END_SRC
 
 ***** Extensions: ycmd
@@ -458,6 +491,14 @@
   (use-package subword
     :config (global-subword-mode 1)
     :diminish subword-mode)
+
+  ;; www.emacswiki.org/emacs/AutoIndentation
+  (dolist (command '(yank yank-pop))
+    (eval `(defadvice ,command (after indent-region activate)
+             (and (not current-prefix-arg)
+                  (member major-mode '(emacs-lisp-mode c-mode c++-mode objc-mode))
+                  (let ((mark-even-if-inactive transient-mark-mode))
+                    (indent-region (region-beginning) (region-end)))))))
 #+END_SRC
 
 *** Third-party
@@ -470,7 +511,7 @@
             (add-hook 'c-mode-common-hook 'google-make-newline-indent)))
 
   (req-package indent-guide
-    :idle (indent-guide-global-mode 1) ;; BUG: init crashes Emacs daemon
+    :idle (indent-guide-global-mode 1) ; BUG: init crashes Emacs daemon
     :config (progn
               (setq indent-guide-inhibit-modes
                     (append '(package-menu-mode Info-mode Man-mode)
